<?xml version="1.0" encoding="utf-8"?>
<com.game.tobin.view.NormalLoginView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:id="@+id/account_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/game_tobin_white_border_bg_transparent"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="#A0808080"
                android:padding="5dp"
                android:contentDescription="img"
                android:src="@drawable/game_tobin_icon_account" />

            <EditText
                android:id="@+id/account_edit"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/tobin_input_account"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textEmailAddress"
                android:paddingLeft="12dp"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="#909090"
                android:textSize="16dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/passwd_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/game_tobin_white_border_bg_transparent"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:background="#A0808080"
                    android:padding="5dp"
                    android:contentDescription="img"
                    android:src="@drawable/game_tobin_icon_password" />

                <EditText
                    android:id="@+id/password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/tobin_input_password"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword"
                    android:paddingLeft="12dp"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textColorHint="#909090"
                    android:textSize="16dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/btnLoginViewForgetPw"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="2dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/game_tobin_selector_btn_forget_password"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/game_tobin_selector_orange_round"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/tobin_begin_play"
            android:textColor="@android:color/white"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/btnQuickLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/game_tobin_selector_white_round_border"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="4dp"
                android:layout_marginRight="4dp"
                android:text="@string/tobin_free_play"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <LinearLayout
                android:id="@+id/btnLoginViewRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/game_tobin_selector_white_round_border"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="4dp" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/tobin_register_account"
                    android:textColor="@android:color/black"
                    android:textSize="14dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:gravity="right"
                android:visibility="invisible"
                android:text="@string/tobin_text_or"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/btnLoginViewThirdLogin1"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:src="@drawable/game_tobin_btn_fb_selector" />

                <!--<com.facebook.login.widget.LoginButton-->
                    <!--android:id="@+id/btnLoginViewThirdLogin1"-->
                    <!--android:layout_width="38dp"-->
                    <!--android:layout_height="38dp"-->
                    <!--android:layout_marginRight="4dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_gravity="center_horizontal" />-->

                <ImageView
                    android:id="@+id/btnLoginViewThirdLogin2"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:src="@drawable/game_tobin_btn_google_selector" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</com.game.tobin.view.NormalLoginView>
